--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
-#Fri May 16 02:44:52 UTC 2025
+#Fri May 16 04:50:54 UTC 2025
+spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
