--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,11 +1,12 @@
 #Minecraft server properties
-#Sat May 17 02:07:38 UTC 2025
+#Sat May 17 02:38:57 UTC 2025
 spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
 allow-nether=true
 gamemode=0
+broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=3
